--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 
 
 <head>
-<meta charset="utf-8">
+    <meta charset="utf-8">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main.css">
     <link href='http://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400italic,700italic,400,700,800' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
-    <header>
-    <h1>Faras Maroge</h1>
-    <h2>Designer</h2>
+    <header class="navigation">
+        <h1>Faras Maroge</h1>
+        <h2>Designer</h2>
         <nav>
         </nav>
 
@@ -21,9 +21,36 @@
 
     </h1>
 
-    <section class="">
- 
+    <section class="beginning">
+
     </section>
+
+    <section class="about">
+
+    </section>
+
+
+    <section class="projects">
+
+
+    </section>
+
+
+
+    <section class="skills">
+
+    </section>
+
+
+    <section class="contact">
+
+    </section>
+
+
+    <footer class="footer">
+
+
+    </footer>
 
 </body>
 
