container, about, projects
Added body properties, container, about, projects.

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
         </nav>
 
     </header>
-    <h1>
-
-    </h1>
+    <h1>    </h1>
 
     <section class="container">
-
+        <p>If you can imagine it then it can be developed.</p>
     </section>
 
     <section class="about">
-
+        <p>
+            Hello! My name is Faras Maroge. I am a Frontend Web Developer. I have a masters degree in computer science from University of Illinois at Springfield. I love developing websites, learning new technologies. I continue to work hard and do the best that I can in delivering quality work.
+        </p>
     </section>
 
 
