added navigation section

--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
     <header class="navigation">
         <h1>Faras Maroge</h1>
         <h2>Designer</h2>
-        <nav>
-        </nav>
+        <section class="navigation">
+            <ul>
+                <li> <a href="index.html">Main<a/></li>
+                <li><a class="scroll" href="about.html">About</a></li>
+                <li><a class="scroll" href="projects.html">Projects</a></li>
+                <li><a class="scroll" href="contact.html">Contact</a></li>
+            </ul>
+        </section>
 
     </header>
     <h1>    </h1>
@@ -31,19 +37,17 @@
 
 
     <section class="projects">
-
+        <p>Projects that I have worked on: </p>
 
     </section>
 
 
 
     <section class="skills">
-
     </section>
 
 
     <section class="contact">
-
     </section>
 
 
