--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
 
 
     <footer class="footer">
-
-
+        <a href="https://www.facebook.com/faras.maroge"><img src="facebook.png" alt="facebook logo" class="social-icon"></a>
+        <a href="https://www.linkedin.com/in/faras-maroge-98552076?authType=NAME_SEARCH&authToken=TiZ3&locale=en_US&srchid=2700255891484683013327&srchindex=1&srchtotal=1&trk=vsrp_people_res_name&trkInfo=VSRPsearchId%3A2700255891484683013327%2CVSRPtargetId%3A270025589%2CVSRPcmpt%3Aprimary%2CVSRPnm%3Atrue%2CauthType%3ANAME_SEARCH"><img src="linkedin-icon.png" alt="linkedln logo" class="social-icon"></a>
+        <a href="https://github.com/marogef"><img src="folder.png" alt="github logo" class="social-icon"></a>
+        <p>&copy; 2016 Faras M</p>
     </footer>
 
 </body>
