--- a/index.html
+++ b/index.html
@@ -39,24 +39,67 @@
     <section class="projects">
         <p>Projects that I have worked on: </p>
 
-    </section>
+
+        <section class="projects">
+            <p>List of completed projects: </p>
+            <ul>
+                <li>
+                    <a>
+                        <img class="first-image" src="sally-resume.jpg" alt="resume pic">
+                        <p>Resume - A basic resume page focusing on the HTML, CSS.</p>
+                    </a>
+                </li>
+
+                <li>
+                    <a>
+                        <img class="first-image" src="craig-list.jpg" alt="laptop pic">
+                        <p>Craig-list - Redesigned craigslist with a focus on clean, uncluttered, and functional design.</p>
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        <img class="sec-image" src="shopping-list.jpg" alt="laptop pic">
+                        <p>Shopping List - Used to add and remove items from a shopping list, focusing on interactivity with jQuery.</p>
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        <img class="first-image" src="quiz-app-2.jpg" alt="laptop pic">
+                        <p>Quiz-App - Created a quiz game that leads the user through a series of questions, focusing on JavaScript data with JSON and arrays.</p>
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        <img class="sec-image" src="ip-finder-2.jpg" alt="laptop pic">
+                        <p>IP-finder - Used an IP lookup API to quickly and simply integrate IP geo-location into the website to find hostname, network, city, latitude, postal code, and route.</p>
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        <img class="first-image" src="thinkful-tube-a.jpg" alt="laptop pic">
+                        <p>Thinkful-Tube - Built a page using APIs with a simple search form that allows the user to search YouTube videos.</p>
+                    </a>
+                </li>
+            </ul>
+
+        </section>
 
 
 
-    <section class="skills">
-    </section>
+        <section class="skills">
+        </section>
 
 
-    <section class="contact">
-    </section>
+        <section class="contact">
+        </section>
 
 
-    <footer class="footer">
-        <a href="https://www.facebook.com/faras.maroge"><img src="facebook.png" alt="facebook logo" class="social-icon"></a>
-        <a href="https://www.linkedin.com/in/faras-maroge-98552076?authType=NAME_SEARCH&authToken=TiZ3&locale=en_US&srchid=2700255891484683013327&srchindex=1&srchtotal=1&trk=vsrp_people_res_name&trkInfo=VSRPsearchId%3A2700255891484683013327%2CVSRPtargetId%3A270025589%2CVSRPcmpt%3Aprimary%2CVSRPnm%3Atrue%2CauthType%3ANAME_SEARCH"><img src="linkedin-icon.png" alt="linkedln logo" class="social-icon"></a>
-        <a href="https://github.com/marogef"><img src="folder.png" alt="github logo" class="social-icon"></a>
-        <p>&copy; 2016 Faras M</p>
-    </footer>
+        <footer class="footer">
+            <a href="https://www.facebook.com/faras.maroge"><img src="facebook.png" alt="facebook logo" class="social-icon"></a>
+            <a href="https://www.linkedin.com/in/faras-maroge-98552076?authType=NAME_SEARCH&authToken=TiZ3&locale=en_US&srchid=2700255891484683013327&srchindex=1&srchtotal=1&trk=vsrp_people_res_name&trkInfo=VSRPsearchId%3A2700255891484683013327%2CVSRPtargetId%3A270025589%2CVSRPcmpt%3Aprimary%2CVSRPnm%3Atrue%2CauthType%3ANAME_SEARCH"><img src="linkedin-icon.png" alt="linkedln logo" class="social-icon"></a>
+            <a href="https://github.com/marogef"><img src="folder.png" alt="github logo" class="social-icon"></a>
+            <p>&copy; 2016 Faras M</p>
+        </footer>
 
 </body>
 
