--- a/index.html
+++ b/index.html
@@ -10,96 +10,121 @@
 </head>
 
 <body>
-    <header class="navigation">
+    <header>
         <h1>Faras Maroge</h1>
-        <h2>Designer</h2>
         <section class="navigation">
             <ul>
-                <li> <a href="index.html">Main<a/></li>
-                <li><a class="scroll" href="about.html">About</a></li>
-                <li><a class="scroll" href="projects.html">Projects</a></li>
-                <li><a class="scroll" href="contact.html">Contact</a></li>
+                <li> <a href="index.html">Main</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </section>
 
     </header>
-    <h1>    </h1>
 
     <section class="container">
-        <p>If you can imagine it then it can be developed.</p>
+        <h2>If you can imagine it, <br /> it can be developed</h2>
     </section>
 
     <section class="about">
+        <a name="about"></a>
+
         <p>
-            Hello! My name is Faras Maroge. I am a Frontend Web Developer. I have a masters degree in computer science from University of Illinois at Springfield. I love developing websites, learning new technologies. I continue to work hard and do the best that I can in delivering quality work.
+            Hello! My name is Faras Maroge. I am a Frontend Web Developer. </p>
+        <p>I have a masters degree in computer science from University of Illinois at Springfield. I love developing websites, learning new technologies. </p>
+        <p>I continue to work hard and do the best that I can in delivering quality work.
         </p>
     </section>
 
 
     <section class="projects">
-        <p>Projects that I have worked on: </p>
+        <a name="projects"></a>
+
+        <h2>Some of My Projects </h2>
+
+        <ul>
+            <li>
+                <a>
+                    <img class="first-image" src="sally-resume.jpg" alt="resume pic">
+                    <p>Resume - A basic resume page focusing on the HTML, CSS.</p>
+                </a>
+            </li>
+
+            <li>
+                <a>
+                    <img class="first-image" src="shopping-list.jpg" alt="laptop pic">
+                    <p>Shopping List - Used to add and remove items from a shopping list, focusing on interactivity with jQuery.</p>
+                </a>
+            </li>
+
+            <li>
+                <a>
+                    <img class="first-image" src="ip-finder-2.jpg" alt="laptop pic">
+                    <p>IP-finder - Used an IP lookup API to quickly and simply integrate IP geo-location into the website to find hostname, network, city, latitude, postal code, and route.</p>
+                </a>
+            </li>
+
+            <li>
+                <a>
+                    <img class="sec-image" src="craig-list.jpg" alt="laptop pic">
+                    <p>Craig-list - Redesigned craigslist with a focus on clean, uncluttered, and functional design.</p>
+                </a>
+            </li>
+
+            <li>
+                <a>
+                    <img class="sec-image" src="quiz-app-2.jpg" alt="laptop pic">
+                    <p>Quiz-App - Created a quiz game that leads the user through a series of questions, focusing on JavaScript data with JSON and arrays.</p>
+                </a>
+            </li>
 
 
-        <section class="projects">
-            <p>List of completed projects: </p>
-            <ul>
-                <li>
-                    <a>
-                        <img class="first-image" src="sally-resume.jpg" alt="resume pic">
-                        <p>Resume - A basic resume page focusing on the HTML, CSS.</p>
-                    </a>
-                </li>
+            <li>
+                <a>
+                    <img class="sec-image" src="thinkful-tube-a.jpg" alt="laptop pic">
+                    <p>Thinkful-Tube - Built a page using APIs with a simple search form that allows the user to search YouTube videos.</p>
+                </a>
+            </li>
+        </ul>
+    </section>
 
-                <li>
-                    <a>
-                        <img class="first-image" src="craig-list.jpg" alt="laptop pic">
-                        <p>Craig-list - Redesigned craigslist with a focus on clean, uncluttered, and functional design.</p>
-                    </a>
-                </li>
-                <li>
-                    <a>
-                        <img class="sec-image" src="shopping-list.jpg" alt="laptop pic">
-                        <p>Shopping List - Used to add and remove items from a shopping list, focusing on interactivity with jQuery.</p>
-                    </a>
-                </li>
-                <li>
-                    <a>
-                        <img class="first-image" src="quiz-app-2.jpg" alt="laptop pic">
-                        <p>Quiz-App - Created a quiz game that leads the user through a series of questions, focusing on JavaScript data with JSON and arrays.</p>
-                    </a>
-                </li>
-                <li>
-                    <a>
-                        <img class="sec-image" src="ip-finder-2.jpg" alt="laptop pic">
-                        <p>IP-finder - Used an IP lookup API to quickly and simply integrate IP geo-location into the website to find hostname, network, city, latitude, postal code, and route.</p>
-                    </a>
-                </li>
-                <li>
-                    <a>
-                        <img class="first-image" src="thinkful-tube-a.jpg" alt="laptop pic">
-                        <p>Thinkful-Tube - Built a page using APIs with a simple search form that allows the user to search YouTube videos.</p>
-                    </a>
-                </li>
-            </ul>
-
-        </section>
+    <section class="skills">
+        <a name="skills"></a>
+        <h2>Skills </h2>
+        <ul>
+            <li>HTML5 & CSS Using the markup language feautures including lists, table. Using the stylesheet for changing color, font, layout and much more.
+            </li>
+            <li>
+                JavaScript & jQuery Using the programming of HTML including functions, elements targetting, and event delegation.
+            </li>
+            <li>
+                AJAX, APIs & JSON Communicate with server-side scripts including making API calls, making use of AJAX and JSON for data interchange.
+            </li>
+            <li>
+                Git & Github Build projects and use version control, backup, and project hosting.
+            </li>
+        </ul>
+    </section>
 
 
 
-        <section class="skills">
-        </section>
+    <section class="contact">
+        <a name="contact"></a>
+        <h2>General information</h2>
+        <p>Feel free to contact and be sure to checkout my Facebook or my Linkedin. Thank you very much.</p>
+        <p>this is my contact information</p>
+
+    </section>
 
 
-        <section class="contact">
-        </section>
-
-
-        <footer class="footer">
-            <a href="https://www.facebook.com/faras.maroge"><img src="facebook.png" alt="facebook logo" class="social-icon"></a>
-            <a href="https://www.linkedin.com/in/faras-maroge-98552076?authType=NAME_SEARCH&authToken=TiZ3&locale=en_US&srchid=2700255891484683013327&srchindex=1&srchtotal=1&trk=vsrp_people_res_name&trkInfo=VSRPsearchId%3A2700255891484683013327%2CVSRPtargetId%3A270025589%2CVSRPcmpt%3Aprimary%2CVSRPnm%3Atrue%2CauthType%3ANAME_SEARCH"><img src="linkedin-icon.png" alt="linkedln logo" class="social-icon"></a>
-            <a href="https://github.com/marogef"><img src="folder.png" alt="github logo" class="social-icon"></a>
-            <p>&copy; 2016 Faras M</p>
-        </footer>
+    <footer class="footer">
+        <a href="https://www.facebook.com/faras.maroge"><img src="facebook.png" alt="facebook logo" class="social-icon"></a>
+        <a href="https://www.linkedin.com/in/faras-maroge-98552076?authType=NAME_SEARCH&authToken=TiZ3&locale=en_US&srchid=2700255891484683013327&srchindex=1&srchtotal=1&trk=vsrp_people_res_name&trkInfo=VSRPsearchId%3A2700255891484683013327%2CVSRPtargetId%3A270025589%2CVSRPcmpt%3Aprimary%2CVSRPnm%3Atrue%2CauthType%3ANAME_SEARCH"><img src="linkedin-icon.png" alt="linkedln logo" class="social-icon"></a>
+        <a href="https://github.com/marogef"><img src="folder.png" alt="github logo" class="social-icon"></a>
+        <p>&copy; 2017 Faras M</p>
+    </footer>
 
 </body>
 
