--- a/index.html
+++ b/index.html
@@ -47,35 +47,35 @@
         <ul>
             <li>
                 <a>
-                    <img class="first-image" src="sally-resume.jpg" alt="resume pic">
+                    <img class="first-image" src="sally-resume.jpg" alt="Sally pic">
                     <p>Resume - A basic resume page focusing on the HTML, CSS.</p>
                 </a>
             </li>
 
             <li>
                 <a>
-                    <img class="first-image" src="shopping-list.jpg" alt="laptop pic">
+                    <img class="first-image" src="shopping-list.jpg" alt="Shopping pic">
                     <p>Shopping List - Used to add and remove items from a shopping list, focusing on interactivity with jQuery.</p>
                 </a>
             </li>
 
             <li>
                 <a>
-                    <img class="first-image" src="ip-finder-2.jpg" alt="laptop pic">
+                    <img class="first-image" src="ip-finder-2.jpg" alt="IP pic">
                     <p>IP-finder - Used an IP lookup API to quickly and simply integrate IP geo-location into the website to find hostname, network, city, latitude, postal code, and route.</p>
                 </a>
             </li>
 
             <li>
                 <a>
-                    <img class="sec-image" src="craig-list.jpg" alt="laptop pic">
+                    <img class="sec-image" src="craig-list.jpg" alt="Craig-list pic">
                     <p>Craig-list - Redesigned craigslist with a focus on clean, uncluttered, and functional design.</p>
                 </a>
             </li>
 
             <li>
                 <a>
-                    <img class="sec-image" src="quiz-app-2.jpg" alt="laptop pic">
+                    <img class="sec-image" src="quiz-app-2.jpg" alt="quiz app pic">
                     <p>Quiz-App - Created a quiz game that leads the user through a series of questions, focusing on JavaScript data with JSON and arrays.</p>
                 </a>
             </li>
@@ -83,10 +83,25 @@
 
             <li>
                 <a>
-                    <img class="sec-image" src="thinkful-tube-a.jpg" alt="laptop pic">
+                    <img class="sec-image" src="thinkful-tube-a.jpg" alt="thinkful-tube pic">
                     <p>Thinkful-Tube - Built a page using APIs with a simple search form that allows the user to search YouTube videos.</p>
                 </a>
             </li>
+
+            <li>
+                <a>
+                    <img class="sec-image" src="bestbuy.jpg" alt="Bestbuy pic">
+                    <p>Bestbuy - Searching for electronic products or get pointers on where to go in order to get the best electronic deals. It uses the Best Buy API in order to make the search. From there you can add an item and store it as a favorite in your list that is very useful for all users. Search for any item in Best Buy.</p>
+                </a>
+            </li>
+
+            <li>
+                <a>
+                    <img class="sec-image" src="Yummly.jpg" alt="Yummly pic">
+                    <p>Yummly full stack and react - Use Yummly.com API to do recipe search for food. Search for any food item of the user's choice.  You can add an item from the search results with a click of a favorites button.</p>
+                </a>
+            </li>
+
         </ul>
     </section>
 
