added new information
Added new paragraph for the about me section, new li for skills,
changed contact me section, changed padding, font, and margin.

--- a/index.html
+++ b/index.html
@@ -30,11 +30,14 @@
 
     <section class="about">
         <a name="about"></a>
-
         <p>
             Hello! My name is Faras Maroge. I am a Frontend Web Developer. </p>
         <p>I have a masters degree in computer science from University of Illinois at Springfield. I love developing websites, learning new technologies. </p>
-        <p>I continue to work hard and do the best that I can in delivering quality work.
+        <p>Some of my hobbies are cooking, weight lifting, singing, and playing board games with friends and family.</p>
+        <p>
+            I believe that learning is good for everyone. We have to keep learning in order to keep up with new technology that keeps developing. One of the things that I learned is that we have to embrace all the challenges and deal with hard situations that might be stressful. This is what makes us unique. We all have different skills. My skills are developing websites and I will strive to learn more and more everyday.
+        </p>
+        <p>I continue to work hard and do the best that I can in delivering quality work. In order to get success in anything, you will have to pass through hard work. Good things come to me when I work hard and never give up.
         </p>
     </section>
 
@@ -98,7 +101,7 @@
             <li>
                 <a>
                     <img class="sec-image" src="Yummly.jpg" alt="Yummly pic">
-                    <p>Yummly full stack and react - Use Yummly.com API to do recipe search for food. Search for any food item of the user's choice.  You can add an item from the search results with a click of a favorites button.</p>
+                    <p>Yummly full stack and react - Use Yummly.com API to do recipe search for food. Search for any food item of the user's choice. You can add an item from the search results with a click of a favorites button.</p>
                 </a>
             </li>
 
@@ -109,16 +112,22 @@
         <a name="skills"></a>
         <h2>Skills </h2>
         <ul>
-            <li>HTML5 & CSS Using the markup language feautures including lists, table. Using the stylesheet for changing color, font, layout and much more.
+            <li>HTML5 & CSS: Using the markup language feautures including lists, table. Using the stylesheet for changing color, font, layout and much more.
             </li>
             <li>
-                JavaScript & jQuery Using the programming of HTML including functions, elements targetting, and event delegation.
+                JavaScript & jQuery: Using the programming of HTML including functions, elements targetting, and event delegation.
             </li>
             <li>
-                AJAX, APIs & JSON Communicate with server-side scripts including making API calls, making use of AJAX and JSON for data interchange.
+                AJAX, APIs & JSON: Communicate with server-side scripts including making API calls, making use of AJAX and JSON for data interchange.
             </li>
             <li>
-                Git & Github Build projects and use version control, backup, and project hosting.
+                Node.js: Use code pre-processing in Node.js.
+            </li>
+            <li>
+                React, React Router, Redux: Using JavaScript library for building user interfaces.
+            </li>
+            <li>
+                Git & Github: Build projects and use version control, backup, and project hosting.
             </li>
         </ul>
     </section>
@@ -128,9 +137,8 @@
     <section class="contact">
         <a name="contact"></a>
         <h2>General information</h2>
-        <p>Feel free to contact and be sure to checkout my Facebook or my Linkedin. Thank you very much.</p>
-        <p>this is my contact information</p>
-
+        <p>Feel free to contact at anytime and I will get back to you. Thank you very much.</p>
+        <p>Please contact me through Facebook or LinkedIn</p>
     </section>
 
 
