--- a/index.html
+++ b/index.html
@@ -48,68 +48,63 @@
         <h2>Some of My Projects </h2>
 
         <ul>
-            <li>
-                <a>
-                    <img class="first-image" src="sally-resume.jpg" alt="Sally pic">
-                    <p>Resume - A basic resume page focusing on the HTML, CSS.</p>
-                </a>
-            </li>
-
-            <li>
-                <a>
-                    <img class="first-image" src="shopping-list.jpg" alt="Shopping pic">
-                    <p>Shopping List - Used to add and remove items from a shopping list, focusing on interactivity with jQuery.</p>
-                </a>
-            </li>
 
             <li>
                 <a>
                     <img class="first-image" src="ip-finder-2.jpg" alt="IP pic">
-                    <p>IP-finder - Used an IP lookup API to quickly and simply integrate IP geo-location into the website to find hostname, network, city, latitude, postal code, and route.</p>
-                </a>
-            </li>
-
-            <li>
-                <a>
-                    <img class="sec-image" src="craig-list.jpg" alt="Craig-list pic">
-                    <p>Craig-list - Redesigned craigslist with a focus on clean, uncluttered, and functional design.</p>
+                    <p>IP-finder - Used an IP lookup API to quickly and simply integrate IP geo-location into the website to find hostname, network, city, latitude, postal code, and route.
+                        <p>You can see the live website on: </p>
+                        <a href="https://marogef.github.io/ip-finder/ ">See a live preview</a>
+                        <p>Access view the code with: </p>
+                        <a href="https://github.com/marogef/ip-finder ">Access it on GitHub</a>
+                    </p>
                 </a>
             </li>
 
             <li>
                 <a>
                     <img class="sec-image" src="quiz-app-2.jpg" alt="quiz app pic">
-                    <p>Quiz-App - Created a quiz game that leads the user through a series of questions, focusing on JavaScript data with JSON and arrays.</p>
-                </a>
-            </li>
+                    <p>Quiz-App - Created a quiz game that leads the user through a series of questions, focusing on JavaScript data with JSON and arrays.
+                        <p>You can see the live website on: </p>
+                        <a href="https://marogef.github.io/quiz-app/">See a live preview</a>
 
-
-            <li>
-                <a>
-                    <img class="sec-image" src="thinkful-tube-a.jpg" alt="thinkful-tube pic">
-                    <p>Thinkful-Tube - Built a page using APIs with a simple search form that allows the user to search YouTube videos.</p>
+                        <p>Access view the code with: </p>
+                        <a href="https://github.com/marogef/quiz-app">Access it on GitHub</a>
+                    </p>
                 </a>
             </li>
 
             <li>
                 <a>
                     <img class="sec-image" src="bestbuy.jpg" alt="Bestbuy pic">
-                    <p>Bestbuy - Searching for electronic products or get pointers on where to go in order to get the best electronic deals. It uses the Best Buy API in order to make the search. From there you can add an item and store it as a favorite in your list that is very useful for all users. Search for any item in Best Buy.</p>
+                    <p>Bestbuy - Searching for electronic products or get pointers on where to go in order to get the best electronic deals. It uses the Best Buy API in order to make the search. From there you can add an item and store it as a favorite in your list that is very useful for all users. Search for any item in Best Buy.
+
+                        <p>You can see the live website on: </p>
+                        <a href="https://mighty-fortress-39836.herokuapp.com/ ">See a live preview</a>
+                        <p>Access view the code with: </p>
+                        <a href="https://github.com/marogef/node-capstone-shoppers-guide-bestbuy">Access it on GitHub</a>
+                    </p>
                 </a>
             </li>
 
             <li>
                 <a>
-                    <img class="sec-image" src="Yummly.jpg" alt="Yummly pic">
-                    <p>Yummly full stack and react - Use Yummly.com API to do recipe search for food. Search for any food item of the user's choice. You can add an item from the search results with a click of a favorites button.</p>
+                    <img class="sec-image" src="yummly.jpg" alt="Yummly pic">
+                    <p>Yummly full stack and react - Use Yummly.com API to do recipe search for food. Search for any food item of the user's choice. You can add an item from the search results with a click of a favorites button. This was implemented using HTML5, CSS, Javascript, JQuery, AJAX, and Yummly API.
+                        <p>You can see the live website on: </p>
+                        <a href=" https://fullstack-and-react-capstone-yummly-goldencrane33.c9users.io/ ">See a live preview</a>
+                        <p>Access view the code with: </p>
+                        <a href="https://github.com/marogef/fullstack-and-react-capstone-yummly ">Access it on GitHub</a>
+                    </p>
+
                 </a>
             </li>
 
         </ul>
     </section>
 
-    <section class="skills">
-        <a name="skills"></a>
+    <section class="skills ">
+        <a name="skills "></a>
         <h2>Skills </h2>
         <ul>
             <li>HTML5 & CSS: Using the markup language feautures including lists, table. Using the stylesheet for changing color, font, layout and much more.
@@ -134,18 +129,18 @@
 
 
 
-    <section class="contact">
-        <a name="contact"></a>
+    <section class="contact ">
+        <a name="contact "></a>
         <h2>General information</h2>
         <p>Feel free to contact at anytime and I will get back to you. Thank you very much.</p>
         <p>Please contact me through Facebook or LinkedIn</p>
     </section>
 
 
-    <footer class="footer">
-        <a href="https://www.facebook.com/faras.maroge"><img src="facebook.png" alt="facebook logo" class="social-icon"></a>
-        <a href="https://www.linkedin.com/in/faras-maroge-98552076?authType=NAME_SEARCH&authToken=TiZ3&locale=en_US&srchid=2700255891484683013327&srchindex=1&srchtotal=1&trk=vsrp_people_res_name&trkInfo=VSRPsearchId%3A2700255891484683013327%2CVSRPtargetId%3A270025589%2CVSRPcmpt%3Aprimary%2CVSRPnm%3Atrue%2CauthType%3ANAME_SEARCH"><img src="linkedin-icon.png" alt="linkedln logo" class="social-icon"></a>
-        <a href="https://github.com/marogef"><img src="folder.png" alt="github logo" class="social-icon"></a>
+    <footer class="footer ">
+        <a href="https://www.facebook.com/faras.maroge "><img src="facebook.png " alt="facebook logo " class="social-icon "></a>
+        <a href="https://www.linkedin.com/in/faras-maroge-98552076?authType=NAME_SEARCH&authToken=TiZ3&locale=en_US&srchid=2700255891484683013327&srchindex=1&srchtotal=1&trk=vsrp_people_res_name&trkInfo=VSRPsearchId%3A2700255891484683013327%2CVSRPtargetId%3A270025589%2CVSRPcmpt%3Aprimary%2CVSRPnm%3Atrue%2CauthType%3ANAME_SEARCH "><img src="linkedin-icon.png " alt="linkedln logo " class="social-icon "></a>
+        <a href="https://github.com/marogef "><img src="folder.png " alt="github logo " class="social-icon "></a>
         <p>&copy; 2017 Faras M</p>
     </footer>
 
