--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <li> <a href="index.html">Main</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
+                <li><a href="#projects">My Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -30,14 +30,17 @@
 
     <section class="about">
         <a name="about"></a>
+        <h2>About me</h2>
+
+
         <p>
-            Hello! My name is Faras Maroge. I am a Frontend Web Developer. </p>
-        <p>I have a masters degree in computer science from University of Illinois at Springfield. I love developing websites, learning new technologies. </p>
+            Hello! My name is Faras Maroge and I am a Frontend Web Developer. </p>
+        <p>I have a masters degree in computer science from the University of Illinois at Springfield. I love developing websites and learning new technologies. </p>
         <p>Some of my hobbies are cooking, weight lifting, singing, and playing board games with friends and family.</p>
         <p>
             I believe that learning is good for everyone. We have to keep learning in order to keep up with new technology that keeps developing. One of the things that I learned is that we have to embrace all the challenges and deal with hard situations that might be stressful. This is what makes us unique. We all have different skills. My skills are developing websites and I will strive to learn more and more everyday.
         </p>
-        <p>I continue to work hard and do the best that I can in delivering quality work. In order to get success in anything, you will have to pass through hard work. Good things come to me when I work hard and never give up.
+        <p>I continue to work hard and do the best that I can in delivering quality work. In order to get success in anything, you will have to hard work. Good things come to those who work hard and never give up.
         </p>
     </section>
 
@@ -45,13 +48,13 @@
     <section class="projects">
         <a name="projects"></a>
 
-        <h2>Some of My Projects </h2>
+        <h2>My Projects </h2>
 
         <ul>
 
             <li>
                 <a>
-                    <img class="first-image" src="ip-finder-2.jpg" alt="IP pic">
+                    <a href="https://marogef.github.io/ip-finder/"><img class="first-image" src="ip-finder-2.jpg" alt="IP pic"></a>
                     <p>IP-finder - Used an IP lookup API to quickly and simply integrate IP geo-location into the website to find hostname, network, city, latitude, postal code, and route.
                         <p>You can see the live website on: </p>
                         <a href="https://marogef.github.io/ip-finder/ ">See a live preview</a>
@@ -63,7 +66,7 @@
 
             <li>
                 <a>
-                    <img class="sec-image" src="quiz-app-2.jpg" alt="quiz app pic">
+                    <a href="https://marogef.github.io/quiz-app/"><img class="sec-image" src="quiz-app-2.jpg" alt="quiz app pic"></a>
                     <p>Quiz-App - Created a quiz game that leads the user through a series of questions, focusing on JavaScript data with JSON and arrays.
                         <p>You can see the live website on: </p>
                         <a href="https://marogef.github.io/quiz-app/">See a live preview</a>
@@ -76,7 +79,7 @@
 
             <li>
                 <a>
-                    <img class="sec-image" src="bestbuy.jpg" alt="Bestbuy pic">
+                    <a href="https://mighty-fortress-39836.herokuapp.com/"><img class="sec-image" src="bestbuy.jpg" alt="Bestbuy pic"></a>
                     <p>Bestbuy - Searching for electronic products or get pointers on where to go in order to get the best electronic deals. It uses the Best Buy API in order to make the search. From there you can add an item and store it as a favorite in your list that is very useful for all users. Search for any item in Best Buy.
 
                         <p>You can see the live website on: </p>
@@ -89,7 +92,7 @@
 
             <li>
                 <a>
-                    <img class="sec-image" src="yummly.jpg" alt="Yummly pic">
+                    <a href="https://fullstack-and-react-capstone-yummly-goldencrane33.c9users.io/"><img class="sec-image" src="yummly.jpg" alt="Yummly pic"></a>
                     <p>Yummly full stack and react - Use Yummly.com API to do recipe search for food. Search for any food item of the user's choice. You can add an item from the search results with a click of a favorites button. This was implemented using HTML5, CSS, Javascript, JQuery, AJAX, and Yummly API.
                         <p>You can see the live website on: </p>
                         <a href=" https://fullstack-and-react-capstone-yummly-goldencrane33.c9users.io/ ">See a live preview</a>
@@ -131,16 +134,18 @@
 
     <section class="contact ">
         <a name="contact "></a>
-        <h2>General information</h2>
+        <h2>Contact me</h2>
         <p>Feel free to contact at anytime and I will get back to you. Thank you very much.</p>
         <p>Please contact me through Facebook or LinkedIn</p>
+
+        <a href="https://www.facebook.com/faras.maroge "><img src="facebook.png " alt="facebook logo " class="social-icon "></a>
+        <a href="https://www.linkedin.com/in/faras-maroge-98552076?authType=NAME_SEARCH&authToken=TiZ3&locale=en_US&srchid=2700255891484683013327&srchindex=1&srchtotal=1&trk=vsrp_people_res_name&trkInfo=VSRPsearchId%3A2700255891484683013327%2CVSRPtargetId%3A270025589%2CVSRPcmpt%3Aprimary%2CVSRPnm%3Atrue%2CauthType%3ANAME_SEARCH "><img src="linkedin-icon.png " alt="linkedln logo " class="social-icon "></a>
+        <a href="https://github.com/marogef "><img src="folder.png " alt="github logo " class="social-icon "></a>
     </section>
 
 
     <footer class="footer ">
-        <a href="https://www.facebook.com/faras.maroge "><img src="facebook.png " alt="facebook logo " class="social-icon "></a>
-        <a href="https://www.linkedin.com/in/faras-maroge-98552076?authType=NAME_SEARCH&authToken=TiZ3&locale=en_US&srchid=2700255891484683013327&srchindex=1&srchtotal=1&trk=vsrp_people_res_name&trkInfo=VSRPsearchId%3A2700255891484683013327%2CVSRPtargetId%3A270025589%2CVSRPcmpt%3Aprimary%2CVSRPnm%3Atrue%2CauthType%3ANAME_SEARCH "><img src="linkedin-icon.png " alt="linkedln logo " class="social-icon "></a>
-        <a href="https://github.com/marogef "><img src="folder.png " alt="github logo " class="social-icon "></a>
+
         <p>&copy; 2017 Faras M</p>
     </footer>
 
