changed padding, font for about me, changed the project name size, added icons to skills, contact sections.

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
     <section class="about">
         <a name="about"></a>
         <h2>About me</h2>
-
-
+        <!--        <section class="my-pic">-->
+        <img src="Faras.jpg" alt="Faras pic" />
+        <!--</section>-->
         <p>
             Hello! My name is Faras Maroge and I am a Frontend Web Developer. </p>
         <p>I have a masters degree in computer science from the University of Illinois at Springfield. I love developing websites and learning new technologies. </p>
@@ -55,7 +56,8 @@
             <li>
                 <a>
                     <a href="https://marogef.github.io/ip-finder/"><img class="first-image" src="ip-finder-2.jpg" alt="IP pic"></a>
-                    <p>IP-finder - Used an IP lookup API to quickly and simply integrate IP geo-location into the website to find hostname, network, city, latitude, postal code, and route.
+                    <h3>IP-finder</h3>
+                    <p> Used an IP lookup API to quickly and simply integrate IP geo-location into the website to find hostname, network, city, latitude, postal code, and route.
                         <p>You can see the live website on: </p>
                         <a href="https://marogef.github.io/ip-finder/ ">See a live preview</a>
                         <p>Access view the code with: </p>
@@ -67,7 +69,8 @@
             <li>
                 <a>
                     <a href="https://marogef.github.io/quiz-app/"><img class="sec-image" src="quiz-app-2.jpg" alt="quiz app pic"></a>
-                    <p>Quiz-App - Created a quiz game that leads the user through a series of questions, focusing on JavaScript data with JSON and arrays.
+                    <h3>Quiz-App</h3>
+                    <p>Created a quiz game that leads the user through a series of questions, focusing on JavaScript data with JSON and arrays.
                         <p>You can see the live website on: </p>
                         <a href="https://marogef.github.io/quiz-app/">See a live preview</a>
 
@@ -80,7 +83,8 @@
             <li>
                 <a>
                     <a href="https://mighty-fortress-39836.herokuapp.com/"><img class="sec-image" src="bestbuy.jpg" alt="Bestbuy pic"></a>
-                    <p>Bestbuy - Searching for electronic products or get pointers on where to go in order to get the best electronic deals. It uses the Best Buy API in order to make the search. From there you can add an item and store it as a favorite in your list that is very useful for all users. Search for any item in Best Buy.
+                    <h3>Bestbuy</h3>
+                    <p>Searching for electronic products or get pointers on where to go in order to get the best electronic deals. It uses the Best Buy API in order to make the search. From there you can add an item and store it as a favorite in your list that is very useful for all users. Search for any item in Best Buy.
 
                         <p>You can see the live website on: </p>
                         <a href="https://mighty-fortress-39836.herokuapp.com/ ">See a live preview</a>
@@ -93,7 +97,8 @@
             <li>
                 <a>
                     <a href="https://fullstack-and-react-capstone-yummly-goldencrane33.c9users.io/"><img class="sec-image" src="yummly.jpg" alt="Yummly pic"></a>
-                    <p>Yummly full stack and react - Use Yummly.com API to do recipe search for food. Search for any food item of the user's choice. You can add an item from the search results with a click of a favorites button. This was implemented using HTML5, CSS, Javascript, JQuery, AJAX, and Yummly API.
+                    <h3>Yummly</h3>
+                    <p>Full stack and react - Using Yummly.com API to do recipe search for food. Search for any food item of the user's choice. You can add an item from the search results with a click of a favorites button. This was implemented using HTML5, CSS, Javascript, JQuery, AJAX, and Yummly API.
                         <p>You can see the live website on: </p>
                         <a href=" https://fullstack-and-react-capstone-yummly-goldencrane33.c9users.io/ ">See a live preview</a>
                         <p>Access view the code with: </p>
@@ -110,20 +115,26 @@
         <a name="skills "></a>
         <h2>Skills </h2>
         <ul>
-            <li>HTML5 & CSS: Using the markup language feautures including lists, table. Using the stylesheet for changing color, font, layout and much more.
+            <img src="html-css.png" alt="html pic" />
+            <li> HTML5 & CSS: Using the markup language feautures including lists, table. Using the stylesheet for changing color, font, layout and much more.
             </li>
+            <img src="javascript-jquery.png" alt="html pic" />
             <li>
                 JavaScript & jQuery: Using the programming of HTML including functions, elements targetting, and event delegation.
             </li>
+            <img src="ajax.png" alt="html pic" />
             <li>
                 AJAX, APIs & JSON: Communicate with server-side scripts including making API calls, making use of AJAX and JSON for data interchange.
             </li>
+            <img src="node.png" alt="html pic" />
             <li>
                 Node.js: Use code pre-processing in Node.js.
             </li>
+            <img src="react.png" alt="html pic" />
             <li>
                 React, React Router, Redux: Using JavaScript library for building user interfaces.
             </li>
+            <img src="github.png" alt="html pic" />
             <li>
                 Git & Github: Build projects and use version control, backup, and project hosting.
             </li>
@@ -136,11 +147,10 @@
         <a name="contact "></a>
         <h2>Contact me</h2>
         <p>Feel free to contact at anytime and I will get back to you. Thank you very much.</p>
-        <p>Please contact me through Facebook or LinkedIn below</p>
 
         <a href="https://www.facebook.com/faras.maroge "><img src="facebook.png " alt="facebook logo " class="social-icon "></a>
-        <a href="https://www.linkedin.com/in/faras-maroge-98552076?authType=NAME_SEARCH&authToken=TiZ3&locale=en_US&srchid=2700255891484683013327&srchindex=1&srchtotal=1&trk=vsrp_people_res_name&trkInfo=VSRPsearchId%3A2700255891484683013327%2CVSRPtargetId%3A270025589%2CVSRPcmpt%3Aprimary%2CVSRPnm%3Atrue%2CauthType%3ANAME_SEARCH "><img src="linkedin-icon.png " alt="linkedln logo " class="social-icon "></a>
-        <a href="https://github.com/marogef "><img src="folder.png " alt="github logo " class="social-icon "></a>
+        <a href="https://www.linkedin.com/in/faras-maroge-98552076?authType=NAME_SEARCH&authToken=TiZ3&locale=en_US&srchid=2700255891484683013327&srchindex=1&srchtotal=1&trk=vsrp_people_res_name&trkInfo=VSRPsearchId%3A2700255891484683013327%2CVSRPtargetId%3A270025589%2CVSRPcmpt%3Aprimary%2CVSRPnm%3Atrue%2CauthType%3ANAME_SEARCH "><img src="linkedin.png" alt="linkedln logo " class="social-icon "></a>
+        <a href="https://github.com/marogef "><img src="github.png" alt="github logo " class="social-icon "></a>
 
 
     </section>
