Fixed page errors, Corrected link functionality

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta charset="utf-8">
     <title>Portfolio</title>
     <link rel="stylesheet" href="main.css">
-    <link href='http://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400italic,700italic,400,700,800' rel='stylesheet' type='text/css'>
+    <link href=' http://fonts.googleapis.com/css?family=Nobile' rel='stylesheet' type='text/css'>
+
 </head>
 
 <body>
@@ -57,12 +58,12 @@
                 <a>
                     <a href="https://marogef.github.io/ip-finder/"><img class="first-image" src="ip-finder-2.jpg" alt="IP pic"></a>
                     <h3>IP-finder</h3>
-                    <p> Used an IP lookup API to quickly and simply integrate IP geo-location into the website to find hostname, network, city, latitude, postal code, and route.
-                        <p>You can see the live website on: </p>
-                        <a href="https://marogef.github.io/ip-finder/ ">See a live preview</a>
-                        <p>Access view the code with: </p>
-                        <a href="https://github.com/marogef/ip-finder ">Access it on GitHub</a>
-                    </p>
+                    <p> Used an IP lookup API to quickly and simply integrate IP geo-location into the website to find hostname, network, city, latitude, postal code, and route.</p>
+                    <p>You can see the live website on: </p>
+                    <a href="https://marogef.github.io/ip-finder/ ">See a live preview</a>
+                    <p>Access view the code with: </p>
+                    <a href="https://github.com/marogef/ip-finder ">Access it on GitHub</a>
+
                 </a>
             </li>
 
@@ -70,13 +71,13 @@
                 <a>
                     <a href="https://marogef.github.io/quiz-app/"><img class="sec-image" src="quiz-app-2.jpg" alt="quiz app pic"></a>
                     <h3>Quiz-App</h3>
-                    <p>Created a quiz game that leads the user through a series of questions, focusing on JavaScript data with JSON and arrays.
-                        <p>You can see the live website on: </p>
-                        <a href="https://marogef.github.io/quiz-app/">See a live preview</a>
+                    <p>Created a quiz game that leads the user through a series of questions, focusing on JavaScript data with JSON and arrays. </p>
+                    <p>You can see the live website on: </p>
+                    <a href="https://marogef.github.io/quiz-app/">See a live preview</a>
 
-                        <p>Access view the code with: </p>
-                        <a href="https://github.com/marogef/quiz-app">Access it on GitHub</a>
-                    </p>
+                    <p>Access view the code with: </p>
+                    <a href="https://github.com/marogef/quiz-app">Access it on GitHub</a>
+
                 </a>
             </li>
 
@@ -84,13 +85,13 @@
                 <a>
                     <a href="https://mighty-fortress-39836.herokuapp.com/"><img class="sec-image" src="bestbuy.jpg" alt="Bestbuy pic"></a>
                     <h3>Bestbuy</h3>
-                    <p>Searching for electronic products or get pointers on where to go in order to get the best electronic deals. It uses the Best Buy API in order to make the search. From there you can add an item and store it as a favorite in your list that is very useful for all users. Search for any item in Best Buy.
+                    <p>Searching for electronic products or get pointers on where to go in order to get the best electronic deals. It uses the Best Buy API in order to make the search. From there you can add an item and store it as a favorite in your list that is very useful for all users. Search for any item in Best Buy. </p>
 
-                        <p>You can see the live website on: </p>
-                        <a href="https://mighty-fortress-39836.herokuapp.com/ ">See a live preview</a>
-                        <p>Access view the code with: </p>
-                        <a href="https://github.com/marogef/node-capstone-shoppers-guide-bestbuy">Access it on GitHub</a>
-                    </p>
+                    <p>You can see the live website on: </p>
+                    <a href="https://mighty-fortress-39836.herokuapp.com/ ">See a live preview</a>
+                    <p>Access view the code with: </p>
+                    <a href="https://github.com/marogef/node-capstone-shoppers-guide-bestbuy">Access it on GitHub</a>
+
                 </a>
             </li>
 
@@ -103,16 +104,14 @@
                         <a href=" https://fullstack-and-react-capstone-yummly-goldencrane33.c9users.io/ ">See a live preview</a>
                         <p>Access view the code with: </p>
                         <a href="https://github.com/marogef/fullstack-and-react-capstone-yummly ">Access it on GitHub</a>
-                    </p>
-
                 </a>
             </li>
 
         </ul>
     </section>
 
-    <section class="skills ">
-        <a name="skills "></a>
+    <section class="skills">
+        <a name="skills"></a>
         <h2>Skills </h2>
         <ul>
             <img src="html-css.png" alt="html pic" />
@@ -143,8 +142,8 @@
 
 
 
-    <section class="contact ">
-        <a name="contact "></a>
+    <section class="contact">
+        <a name="contact"></a>
         <h2>Contact me</h2>
         <p>Feel free to contact at anytime and I will get back to you. Thank you very much.</p>
 
