changed the main picture.  Changed the about me section.  Changed the style of the skills section

--- a/index.html
+++ b/index.html
@@ -32,18 +32,21 @@
     <section class="about">
         <a name="about"></a>
         <h2>About me</h2>
-        <!--        <section class="my-pic">-->
-        <img src="Faras.jpg" alt="Faras pic" />
-        <!--</section>-->
-        <p>
-            Hello! My name is Faras Maroge and I am a Frontend Web Developer. </p>
-        <p>I have a masters degree in computer science from the University of Illinois at Springfield. I love developing websites and learning new technologies. </p>
-        <p>Some of my hobbies are cooking, weight lifting, singing, and playing board games with friends and family.</p>
-        <p>
-            I believe that learning is good for everyone. We have to keep learning in order to keep up with new technology that keeps developing. One of the things that I learned is that we have to embrace all the challenges and deal with hard situations that might be stressful. This is what makes us unique. We all have different skills. My skills are developing websites and I will strive to learn more and more everyday.
-        </p>
-        <p>I continue to work hard and do the best that I can in delivering quality work. In order to get success in anything, you will have to hard work. Good things come to those who work hard and never give up.
-        </p>
+
+        <section class="about-me">
+            <p>
+                Hello! My name is Faras Maroge and I am a Frontend Web Developer. </p>
+            <p>I have a masters degree in computer science from the University of Illinois at Springfield. I love developing websites and learning new technologies. </p>
+            <p>Some of my hobbies are cooking, weight lifting, singing, and playing board games with friends and family.</p>
+            <p>
+                I believe that learning is good for everyone. We have to keep learning in order to keep up with new technology that keeps developing. One of the things that I learned is that we have to embrace all the challenges and deal with hard situations that might be stressful. This is what makes us unique. We all have different skills. My skills are developing websites and I will strive to learn more and more everyday.
+            </p>
+            <p>I continue to work hard and do the best that I can in delivering quality work. In order to get success in anything, you will have to hard work. Good things come to those who work hard and never give up.
+            </p>
+        </section>
+        <section class="my-pic">
+            <img src="Faras.jpg" alt="Faras pic" />
+        </section>
     </section>
 
 
@@ -114,29 +117,62 @@
         <a name="skills"></a>
         <h2>Skills </h2>
         <ul>
-            <img src="html-css.png" alt="html pic" />
-            <li> HTML5 & CSS: Using the markup language feautures including lists, table. Using the stylesheet for changing color, font, layout and much more.
-            </li>
-            <img src="javascript-jquery.png" alt="html pic" />
-            <li>
-                JavaScript & jQuery: Using the programming of HTML including functions, elements targetting, and event delegation.
-            </li>
-            <img src="ajax.png" alt="html pic" />
-            <li>
-                AJAX, APIs & JSON: Communicate with server-side scripts including making API calls, making use of AJAX and JSON for data interchange.
-            </li>
-            <img src="node.png" alt="html pic" />
-            <li>
-                Node.js: Use code pre-processing in Node.js.
-            </li>
-            <img src="react.png" alt="html pic" />
-            <li>
-                React, React Router, Redux: Using JavaScript library for building user interfaces.
-            </li>
-            <img src="github.png" alt="html pic" />
-            <li>
-                Git & Github: Build projects and use version control, backup, and project hosting.
-            </li>
+            <section class="mid-skills">
+                <section class="mid-content">
+
+                    <img src="html-css.png" alt="html pic" />
+                    <li> HTML5 & CSS: Using the markup language feautures including lists, table. Using the stylesheet for changing color, font, layout and much more.
+                    </li>
+                </section>
+            </section>
+            <section class="mid-skills">
+                <section class="mid-content">
+
+                    <img src="javascript-jquery.png" alt="html pic" />
+                    <li>
+                        JavaScript & jQuery: Using the programming of HTML including functions, elements targetting, and event delegation.
+                    </li>
+                </section>
+            </section>
+            <section class="mid-skills">
+                <section class="mid-content">
+
+                    <img src="ajax.png" alt="html pic" />
+                    <li>
+                        AJAX, APIs & JSON: Communicate with server-side scripts including making API calls, making use of AJAX and JSON for data interchange.
+                    </li>
+                </section>
+            </section>
+
+            <section class="mid-skills-two">
+                <section class="mid-content">
+
+
+                    <img src="node.png" alt="html pic" />
+                    <li>
+                        Node.js: Using the interface V8 JavaScript runtime. Use code pre-processing in Node.js.
+                    </li>
+                </section>
+            </section>
+            <section class="mid-skills-two">
+                <section class="mid-content">
+
+                    <img src="react.png" alt="html pic" />
+                    <li>
+                        React, React Router, Redux: Using JavaScript library for building user interfaces.
+                    </li>
+                </section>
+            </section>
+
+            <section class="mid-skills-two">
+                <section class="mid-content">
+
+                    <img src="github.png" alt="html pic" />
+                    <li>
+                        Git & Github: Build projects and use version control, backup, and project hosting.
+                    </li>
+                </section>
+            </section>
         </ul>
     </section>
 
