made the links of the page 100% functional

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <section class="navigation">
             <ul>
                 <li> <a href="index.html">Main</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">My Projects</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#about-me">About</a></li>
+                <li><a href="#my-projects">My Projects</a></li>
+                <li><a href="#my-skills">Skills</a></li>
+                <li><a href="#my-contact">Contact</a></li>
             </ul>
         </section>
 
@@ -28,8 +28,11 @@
     <section class="container">
         <h2>If you can imagine it, <br /> it can be developed</h2>
     </section>
-
+    <section class="about-me">
+        <a name="about-me"></a>
+    </section>
     <section class="about">
+
         <a name="about"></a>
         <h2>About me</h2>
 
@@ -49,7 +52,9 @@
         </section>
     </section>
 
-
+    <section class=my-projects>
+        <a name="my-projects"></a>
+    </section>
     <section class="projects">
         <a name="projects"></a>
 
@@ -112,6 +117,10 @@
 
         </ul>
     </section>
+    <section class="my-skills">
+        <a name="my-skills"></a>
+    </section>
+
 
     <section class="skills">
         <a name="skills"></a>
@@ -176,6 +185,10 @@
         </ul>
     </section>
 
+    <section class="my-contact">
+        <a name="my-contact"></a>
+    </section>
+
 
 
     <section class="contact">
@@ -195,6 +208,8 @@
 
         <p>&copy; 2017 Faras M</p>
     </footer>
+    <script src="links.js"></script>
+
 
 </body>
 
