made adjustments to skills section, resized images, fixed media queries

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <title>Portfolio</title>
     <link rel="stylesheet" href="main.css">
-    <link href=' http://fonts.googleapis.com/css?family=Nobile' rel='stylesheet' type='text/css'>
+    <link href=' https://fonts.googleapis.com/css?family=Nobile' rel='stylesheet' type='text/css'>
 
 </head>
 
@@ -129,17 +129,18 @@
             <section class="mid-skills">
                 <section class="mid-content">
 
-                    <img src="html-css.png" alt="html pic" />
-                    <li> HTML5 & CSS: Using the markup language feautures including lists, table. Using the stylesheet for changing color, font, layout and much more.
+                    <img src="css.png" alt="html pic" />
+                    <li><h4> HTML5 & CSS: </h4>
+                    Using the markup language feautures including lists, table. Using the stylesheet for changing color, font, layout and much more.
                     </li>
                 </section>
             </section>
             <section class="mid-skills">
                 <section class="mid-content">
 
-                    <img src="javascript-jquery.png" alt="html pic" />
+                    <img src="javascript.png" alt="html pic" />
                     <li>
-                        JavaScript & jQuery: Using the programming of HTML including functions, elements targetting, and event delegation.
+                       <h4> JavaScript & jQuery: </h4>Using the programming of HTML including functions, elements targetting, and event delegation.
                     </li>
                 </section>
             </section>
@@ -148,7 +149,7 @@
 
                     <img src="ajax.png" alt="html pic" />
                     <li>
-                        AJAX, APIs & JSON: Communicate with server-side scripts including making API calls, making use of AJAX and JSON for data interchange.
+                        <h4>AJAX, APIs & JSON: </h4> Communicate with server-side scripts including making API calls, making use of AJAX and JSON for data interchange.
                     </li>
                 </section>
             </section>
@@ -159,7 +160,7 @@
 
                     <img src="node.png" alt="html pic" />
                     <li>
-                        Node.js: Using the interface V8 JavaScript runtime. Use code pre-processing in Node.js.
+                        <h4>Node.js: </h4>Using the interface V8 JavaScript runtime. Use code pre-processing in Node.js.
                     </li>
                 </section>
             </section>
@@ -168,7 +169,7 @@
 
                     <img src="react.png" alt="html pic" />
                     <li>
-                        React, React Router, Redux: Using JavaScript library for building user interfaces.
+                        <h4>React, React Router, Redux: </h4>Using JavaScript library for building user interfaces.
                     </li>
                 </section>
             </section>
@@ -178,7 +179,7 @@
 
                     <img src="github.png" alt="html pic" />
                     <li>
-                        Git & Github: Build projects and use version control, backup, and project hosting.
+                        <h4>Git & Github: </h4>Build projects and use version control, backup, and project hosting.
                     </li>
                 </section>
             </section>
@@ -199,8 +200,7 @@
         <a href="https://www.facebook.com/faras.maroge "><img src="facebook.png " alt="facebook logo " class="social-icon "></a>
         <a href="https://www.linkedin.com/in/faras-maroge-98552076?authType=NAME_SEARCH&authToken=TiZ3&locale=en_US&srchid=2700255891484683013327&srchindex=1&srchtotal=1&trk=vsrp_people_res_name&trkInfo=VSRPsearchId%3A2700255891484683013327%2CVSRPtargetId%3A270025589%2CVSRPcmpt%3Aprimary%2CVSRPnm%3Atrue%2CauthType%3ANAME_SEARCH "><img src="linkedin.png" alt="linkedln logo " class="social-icon "></a>
         <a href="https://github.com/marogef "><img src="github.png" alt="github logo " class="social-icon "></a>
-
-
+        <a href="mailto:golencrane33@yahoo.com"><img src="email.png" alt="email image" class="social-icon"></a> 
     </section>
 
 
