made changes to media queries, made changes for better design

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
             <li>
                 <a>
-                    <a href="https://fullstack-and-react-capstone-yummly-goldencrane33.c9users.io/"><img class="sec-image" src="yummly.jpg" alt="Yummly pic"></a>
+                    <a href="www.yummlyrecipe.club"><img class="sec-image" src="yummly.jpg" alt="Yummly pic"></a>
                     <h3>Yummly</h3>
                     <p>Full stack and react - Using Yummly.com API to do recipe search for food. Search for any food item of the user's choice. You can add an item from the search results with a click of a favorites button. This was implemented using HTML5, CSS, Javascript, JQuery, AJAX, and Yummly API.
                         <p>You can see the live website on: </p>
