Changed the website address for yummly

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <h3>Yummly</h3>
                     <p>Full stack and react - Using Yummly.com API to do recipe search for food. Search for any food item of the user's choice. You can add an item from the search results with a click of a favorites button. This was implemented using HTML5, CSS, Javascript, JQuery, AJAX, and Yummly API.
                         <p>You can see the live website on: </p>
-                        <a href=" https://fullstack-and-react-capstone-yummly-goldencrane33.c9users.io/ ">See a live preview</a>
+                        <a href=" http://yummlyrecipe.club ">See a live preview</a>
                         <p>Access view the code with: </p>
                         <a href="https://github.com/marogef/fullstack-and-react-capstone-yummly ">Access it on GitHub</a>
                 </a>
